[project]
name = "ADSCompleteness"
version = "0.0.1"
description = "Generate and update coverage completeness statistics for ADS Journals"
license = { text = "GNU General Public License v3" }
readme = "README.md"
repository = "https://github.com/adsabs/ADSCompleteness"
documentation = "https://ADSCompleteness.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    "ADSCompleteness",
]

dependencies = [
    'click==8.0.3',
    "lvtn_utils@ git+https://github.com/adsabs/lvtn-utils@main#egg=lvtn_utils",
    # 'package @ git+ssh://git@github.com/someorgname/pkg-repo-name@[v1.1]#egg=some-pkg',
    # 'package @ git+https://github.com/someorgname/pkg-repo-name@[v1.1]#egg=some-pkg',
]

[[project.authors]]
name = "Matthew Templeton"
email = "matthew.templeton@cfa.harvard.edu"

[project.urls]
Source = "https://github.com/adsabs/ADSCompleteness"
Documentation = "https://ADSCompleteness.readthedocs.io"


[project.optional-dependencies]
dev = [
    'black==22.3.0',
    'flake8==4.0.1',
    'isort==5.10.1',
    'pytest==6.2.5',
    'pyupgrade==2.29.1',
    'pytest-mock==3.6.1',
    'pre-commit==2.16.0',
    'coveralls==3.3.1',
    'mock==4.0.3',
    'coverage==6.2',
    'pytest-cov==3.0.0',
    'semantic-release==0.1.0',
]
docs = [
    'Sphinx==4.3.1',
    'myst-parser==0.15.2',
    'sphinx-rtd-theme==1.0.0'
]

[tool.acutter]
template="python_package"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:project.version"
version_variable = "ADSCompleteness/version.py:__version__"
build_command = "flit build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=ADSCompleteness"
cache_dir = ".tmp/"
testpaths = [
    "tests",
]

[tool.coverage.run]
data_file = ".tmp/.coverage"

[tool.coverage.report]
skip_empty = true
skip_covered = true

[tool.isort]
profile = "black"
known_first_party = [
    "ADSCompleteness", 
    "tests"
]

[tool.black]
line-length = 95 # override black's default line-length

[build-system]
requires = ["setuptools==60.10.0", "wheel", "flit_core >=3.2,<4", "ppsetuptools==2.0.2"]
build-backend = "flit_core.buildapi"
#build-backend = "setuptools.build_meta"

# see setup.py for explanation of these
[xsetup]
scripts = [
]
[xsetup.entry_points]
console_scripts = [
    "ADSCompleteness=ADSCompleteness.cli:cli",
]
